--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "todo",
   
-  "homepage": "http://burnt776.github.io/Web-Devlopment/React JS/todo/",
+  "homepage": "http://burnt776.github.io/todo/",
   
   "version": "0.1.0",
   
